# syncer

./: .flake8  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .shellcheckrc  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yml
src/syncer/: config.py  main.py  repos.py  stats.py  tracking.py
syncer/: config.py  create_release.py  dotfiles.py  main.py  plugins.py  projects.py  repos.py  testpaths.py  update.py  utilities.py
syncer/data/: 1904labs.json  plugins.json  projects.json
syncer/data/plugins/: tmux.json  zsh.json
syncer/data/repos/: 1904labs.json  datapointchris.json
tests/: test_config.py  test_repos.py  test_stats.py  test_tracking.py
